Blender hang when change scene. #38664

Closed
opened 2014-02-16 18:36:49 +01:00 by Eugenio Pignataro · 9 comments

Windows 7 - Ubuntu 13.10
x64

2.69.10

In complex scenes, if I try to change the scene via api blender hang.
Is very common when the scene have some driver...

In the scene run script and blender hang.
bpy.context.screen.scene = bpy.data.scenes["B"]

FREEZE_DRIVER.7z

Thanks!!!

Windows 7 - Ubuntu 13.10 x64 2.69.10 In complex scenes, if I try to change the scene via api blender hang. Is very common when the scene have some driver... In the scene run script and blender hang. bpy.context.screen.scene = bpy.data.scenes["B"] [FREEZE_DRIVER.7z](https://archive.blender.org/developer/F77548/FREEZE_DRIVER.7z) Thanks!!!
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Campbell Barton was assigned by Eugenio Pignataro 2014-02-16 18:36:49 +01:00
Author
Member

Added subscriber: @EugenioPignataro

Added subscriber: @EugenioPignataro
Author
Member

I forgot! remove the tounge driver and the script will work fine!.

I forgot! remove the tounge driver and the script will work fine!.
Campbell Barton removed their assignment 2014-02-17 04:19:38 +01:00
Sergey Sharybin was assigned by Campbell Barton 2014-02-17 04:19:38 +01:00

Added subscriber: @ideasman42

Added subscriber: @ideasman42

its a deadlock between drivers and a python initialized scene update call rna_Screen_scene_update -> ED_screen_set_scene.

its a deadlock between drivers and a python initialized scene update call `rna_Screen_scene_update -> ED_screen_set_scene`.

This issue was referenced by blender/blender-addons-contrib@1562fd99f1

This issue was referenced by blender/blender-addons-contrib@1562fd99f173898b3698972c90cdcb96c851dbbf

This issue was referenced by 1562fd99f1

This issue was referenced by 1562fd99f173898b3698972c90cdcb96c851dbbf

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 1562fd99f1.

Closed by commit 1562fd99f1.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38664
No description provided.